# mealpedant_api

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _typos.toml  create_release.sh  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-body.md
.github/workflows/: new_release.yml
.sqlx/: query-05970f09c3481547c2e7f56d0b7cabbc44497110255c8b801f8992403ed21497.json  query-05aea83a1490474a63c34a3ec0d770d8d16f1c298c20232352df6cd5ad15d7cc.json  query-0cc2fec120c37ee027f50fcd09829d7319fe28451867995829b9f8459c651963.json  query-14cea962b4e037f37424358fe000d9b108230273966cd5a6ba8d96402012897c.json  query-173c1f09a5e8e6716df47d377e05b86e676c90f7d96cc7d51cb542df3ea65825.json  query-180cf13779fb229ac77337453ac0a797f56d7590225eafd62bceb0945b2b6596.json  query-1ec6b84fcdd848924d58d677e1c5af9fd541dc709782dcf2900b95466ebf6845.json  query-247dcdbb5e170495eb3935ac080d476bd1431097f54ca4c03c01dc9ed6a4a1dd.json  query-29259c5339acef4107786d3d023912fd609c696c30d227df0afb1ba72aec2a9e.json  query-37fa9da2cd6420074b1df551416ce040ce7c7b85c7ad6e825cc44411c870cccf.json  query-46292d85272dcda542a135645a61e458ed56f42746f8d06fea423e4daad61b22.json  query-476628fd3437d10bd7f615dc7ee61c96613eb1833cc1498850923c13df82aa21.json  query-4d155835b195e2efa31b181a2a984fcbcf83336e894a823e561828aa5ca03fea.json  query-4e7b52714525645a70aa505255a06641de180836bf792d2ad250cd1e5038f310.json  query-653a7eab491ea94b9319e5c1f8054081b6f23a6cd59ab81e1bb7895013ec99f7.json  query-67543ec9e7327d3ea22fce778a6e81e95622f76a39e751f58482e0a608d9ea47.json  query-7078557ce2c0c5892373dcfeaeb71efd61ca5b76c6859552a5f2308959626233.json  query-74e3fd00fb03d2e0da208b7a91d6108a93da12a986316501d3ccd58099e6d50e.json  query-792eb96104838dd0b268d6fee161adfb667265775a40b14c848728903b91a4a3.json  query-79c62958c4919019b39f7a79bef69042f5125121418604262e78015575239365.json  query-7c66006d2c8a3f7b28aa48376bf91c77bbd1f6f75627103b8bfc011f9c3f12f6.json  query-7d75c5642c5c2d8c61d6a18ca958b54da4c77e3d9794f41b27b9a695a35ec526.json  query-7dc6c0cacb08727f9b1051c67894d84c4451665db46eccc630c3a87a2335c47d.json  query-7e079f36455d8590c45ed540b290e6797e2fef4643085847cdf108022afcb814.json  query-80231188188b3fa0cf886be032e9f7098faf33699f7bfd9b5cb0ea273189275b.json  query-8302d24f5521c8e0611f3f3e06b40ac1e510f22022ad91472186ed1fc20fc28a.json  query-83708af16ad3e04341737016c7902fd48b6563f24dccddf08c139f20430f26c6.json  query-83a7f0e27db970b167c85e7d7566eab257275bb56a2343594a8d6b582775de6e.json  query-84da2389f34f510d7e8f4f1be8a685fa6d4e5cd755b32952d7952f57cc30d097.json  query-941e3fc721df808d719c644e8c72c9740d9ad7f78ed5cf9f4681e76dea4f8b73.json  query-9b0e1bcba46c8dc67b26ce606d99302799937979110a39061e1586edabcb436c.json  query-a3860e6d4efcb406f2f44964d5d763beea2d82c2f17dd4cc454d722066f7c5b7.json  query-a7c27680e6e0fd43c8ad10970877a7b84bd1544a74a664c7575122adc1dd240f.json  query-a8dfec485ceacc3f5e0b5c4ac704f0994d2bdd86f37a8b7fdeb595af4b93b30d.json  query-ad0cd674b5555681e59c5406f8d0ae04c4c8557dc80360754c4d033f74353d25.json  query-ae504f0b0b286fc15edf4b50bddcad9d76b374a0a88d42047e2aa59217011952.json  query-bbdee75a33e27a13260d797effd9ac2db40a39c9cf3ceccbdb79b43385e62e21.json  query-c8d36c177991a1a629e3fa0cc10126280559c66c8a3e9aecd7681b272c61c70a.json  query-cd04e1c28dd011ea1a6aaaf0c7436d009ab7f4c43acfc26d6a28ac8155ab5387.json  query-d15a2abaf143db2628d01a111c4472344c37d52b6e92b64d95e6d9d9dfe046c8.json  (+12 more)
docker/: dev.docker-compose.yml  docker-compose.yml
docker/confs/: redis.conf
docker/data/: banned_domains.txt
docker/dockerfile/: api.Dockerfile  api.dev.Dockerfile  postgres.Dockerfile  postgres.dev.Dockerfile  redis.Dockerfile
docker/healthcheck/: health_api.sh  health_postgres.sh  health_redis.sh
docker/init/: init_db.sql  init_postgres.sh  init_redis.sh  migrations.sql  postgres_init.dev.sh  postgres_init.sh  redis_init.sh
src/: api_error.rs  argon.rs  helpers.rs  macros.rs  main.rs  parse_env.rs  photo_convertor.rs  scheduler.rs
src/api/: authentication.rs  deserializer.rs  incoming_json.rs  mod.rs  outgoing_json.rs
src/api/routers/: admin.rs  food.rs  incognito.rs  meal.rs  photo.rs  user.rs
src/database/: backup.rs  mod.rs
src/database/postgres/: admin.rs  init.sql  migrations.sql  mod.rs  model_banned_email.rs  model_food.rs  model_ip_user_agent.rs  model_login.rs  model_meal.rs  model_reset_password.rs  model_twofa.rs  model_user.rs
src/database/redis/: mod.rs  redis_new_user.rs  redis_rate_limit.rs  redis_session.rs  redis_two_fa.rs
src/emailer/: mod.rs  template.rs
src/servers/: authentication.rs  deserializer.rs  incoming_json.rs  mod.rs  outgoing_json.rs
src/servers/api/: mod.rs
src/servers/api/routers/: admin.rs  food.rs  incognito.rs  meal.rs  mod.rs  photo.rs  user.rs
src/servers/static_serve/: mod.rs
