[package]
name = "mealpedant"
version = "2.0.0"
edition = "2024"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "Mealpedant api"
homepage = "https://www.mealpedant.com"
repository = "https://github.com/mrjackwills/mealpedant_api"
license = "MIT"
readme = "README.md"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
enum_glob_use = "deny"
expect_used = "warn"
todo = "warn"
unused_async = "warn"
unwrap_used = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie-private"] }
blake3 = "1.8"
bytes = "1.10"
cookie = "0.18"
directories = "6.0"
dotenvy = "0.15"
fred = "10.1"
futures = "0.3"
hex = "0.4"
http-body = "1.0"
image = "0.25"
jiff = { version = "0.2", features=["serde"] }
jiff-sqlx = { version = "0.1", features = ["postgres"] }
lettre = { version = "0.11", default-features = false, features = [
	"builder",
	"hostname",
	"smtp-transport",
	"tokio1-rustls-tls",
	"tokio1",
] }
# Err here - https://github.com/purpleprotocol/mimalloc_rust/issues/133
mimalloc = { version = "0.1.44", default-features = false }
mrml = "5.0"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = [
	"brotli",
	"cookies",
	"gzip",
	"json",
	"multipart",
	"rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sqlx = { version = "0.8", features = [
	"ipnetwork",
	"macros",
	"postgres",
	"runtime-tokio-rustls",
	"time",
] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7" }
totp-rs = { version = "5.6" }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
ulid = "1.2"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
